test/analyze/type_check/variable_declaration/block_scope.myte
module Test

fun main() {
  val t1: Unit = ();
  val t2: Int = ();

  {
    val t3: Unit = ();
    val t4: Int = ();
  }

  fun nested() {
    val t5: Unit = ();
    val t6: Int = ();
  }

  {
    val t2: String = "";
  }
}